--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <title>React Motor EPR Home</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-    <div class="well">
-        <h1>Sample App</h1>
-        <div class="root"></div>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Sample app</h1>
+    <div id="root">
     </div>
-    </body>
+  </body>
 </html>
-
