--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,7 @@
     <title>React Motor EPR Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="shared/img/favicon.png" sizes="16x16" />
 </head>
 
 <body>
