--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,7 @@
     <title>React Motor EPR Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="shared/img/favicon.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="./app/shared/img/favicon.png" sizes="16x16" />
 </head>
 
 <body>
@@ -16,28 +16,3 @@
 </body>
 
 </html>
-
-<!-- <!DOCTYPE html> 
-<html lang="es"> 
-    <head> 
-        <title>React Motor EPR Home</title> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    </head> 
-    <body> 
-        <h1>Sample App</h1> 
-        <div class="root"></div> 
-  </body>
-</html>
-
-<!DOCTYPE html> 
-<html lang="es"> 
-    <head> 
-        <title>React Motor EPR Home</title> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    </head> 
-    <body> 
-    <div class="well"> 
-        <h1>Sample App</h1> 
-        <div class="root"></div> -->
