feature(vehicle.component) maqueta de vehicules, se añade elementos visuales. chore(webpack.config.js) ajusta la configuaracion de webpack. chore(package.json) Add new dependencies

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="jumbotron">
-        <h1>Sample app</h1>
+        <h1>Home App</h1>
         <div id="root"></div>
     </div>
 </body>
